feat(lcd): add LCD and WPM classes for display and input handling

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,5 @@ framework = arduino
 build_unflags = -fno-rtti
 monitor_speed = 115200
 lib_deps =
+    iakop/LiquidCrystal_I2C_ESP32@^1.1.6
     TM1638plus
